Fix spacing in on hero image

--- a/css/styles.css
+++ b/css/styles.css
@@ -11124,7 +11124,13 @@ body {
     line-height: 6rem;
   }
 }
+
 @media (min-width: 992px) {
+  .masthead h1, .masthead .h1 {
+    font-size: 4rem!important;
+    line-height: 8rem;
+    letter-spacing: 0.8rem;
+  }
   .masthead {
     height: 100vh;
     padding: 0;
@@ -11139,7 +11145,13 @@ body {
     font-size: 1.25rem;
   }
 }
-
+@media (min-width: 1500px) {
+  .masthead h1, .masthead .h1 {
+    font-size: 6rem!important;
+    line-height: 9rem;
+    letter-spacing: 1.8rem;
+  }
+}
 .about-section {
   padding-top: 10rem;
   background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
@@ -11178,6 +11190,7 @@ body {
   background-attachment: scroll;
   background-size: cover;
 }
+
 .signup-section .form-signup input {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
